fix(button): add button margin
Add a margin on buttons that are "in focus" to avoid being cut off by other
components

--- a/bigbluebutton-html5/imports/ui/components/presentation/presentation-uploader/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/presentation/presentation-uploader/styles.scss
@@ -471,6 +471,7 @@
 .actionWrapper {
   display: flex;
   align-items: center;
+  margin: 0 0.25rem;
 }
 
 .confirm,
